--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -10,6 +10,7 @@
     <textarea class="form-control"rows="3" name="content"></textarea>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
+  <a href="/articles">Back</a>
 </form>
 
 {{>layouts/footer}}
