--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -51,3 +51,10 @@
     </div>
   </div>
 </nav>
+<!-- alert msg -->
+{{#msg}}
+  <div class="alert alert-primary alert-dismissible">
+    {{msg}}
+    <button type="button" class="btn-close" data-bs-dismis="alert" aria-label="Close"></button>
+  </div>
+{{/msg}}
