--- a/src/main/resources/templates/articles/edit.mustache
+++ b/src/main/resources/templates/articles/edit.mustache
@@ -1,14 +1,15 @@
 {{>layouts/header}}
 
 {{#article}}
-<form class="container" action="" method="post">
+<form class="container" action="/articles/update" method="post">
+  <input name="id" type="hidden" value="{{id}}" />
   <div class=""mb-3>
     <label class=""form="label">제목</label>
-    <input type="text" class="form-control" name="title" value="{{article.title}}">
+    <input type="text" class="form-control" name="title" value="{{title}}">
   </div>
   <div class="mb-3">
     <label class="form-label">내용</label>
-    <textarea class="form-control"rows="3" name="content">{{article.content}}</textarea>
+    <textarea class="form-control"rows="3" name="content">{{content}}</textarea>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
   <a href="/articles/{{id}}">Back</a>
