--- a/src/main/resources/templates/layouts/undernavigation.mustache
+++ b/src/main/resources/templates/layouts/undernavigation.mustache
@@ -1,12 +1,11 @@
-<!-- site info -->
-<div clsass="ad-5 container=fluid">
-  <hr>
-  <p>@ CloudStudying · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-</div>
-
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <!-- Optional JavaScript; choose one of the two! -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+<!--index.js 추가-->
+<script src="/js/app/index.js"></script>
 </body>
 </html>
+
